...
        backButton.addTarget(self, action: #selector(backButtonTapped), for: .touchUpInside)
        
        segmentedControl.insertSegment(withTitle: "As Attacker", at: segmentedControl.numberOfSegments, animated: false)
        segmentedControl.insertSegment(withTitle: "As Defender", at: segmentedControl.numberOfSegments, animated: false)
        segmentedControl.addTarget(self, action: #selector(segmentedControlSelectedIndexDidChange), for: .valueChanged)
        segmentedControl.selectedSegmentIndex = 0
        segmentedControl.accessibilityIdentifier = "typeSegmentedControl"
        
        let topBar = UIView()
        
        topBar.addSubview(backButton)
        topBar.addSubview(segmentedControl)
        
...
        if viewModel.relations == .attack {
            cell.calculateAttackMultipliers(typeInfo1: viewModel.selectedTypeInfo, typeInfo2: viewModel.selectedSecondTypeInfo)
        }
        else {
            cell.calculateDefenseMultipliers(typeInfo1: viewModel.selectedTypeInfo, typeInfo2: viewModel.selectedSecondTypeInfo)
        }
        cell.accessibilityIdentifier = "typeInfoCell"
        return cell
    }
    
    func collectionView(_ collectionView: UICollectionView, layout collectionViewLayout: UICollectionViewLayout, insetForSectionAt section: Int) -> UIEdgeInsets {
        let bottomPadding = AppDelegate.keyWindow?.safeAreaInsets.bottom ?? 0
        return .init(top: 12, left: 16, bottom: bottomPadding + 12, right: 16)
...
