...
        
        let pokemonListButton = MainButton()
        pokemonListButton.setTitle("Pokémon List", for: .normal)
        pokemonListButton.addTarget(self, action: #selector(pokemonListButtonTapped), for: .touchUpInside)
        pokemonListButton.accessibilityIdentifier = "pokemonListButton"
        
        let typeChartButton = MainButton()
        typeChartButton.setTitle("Type Chart", for: .normal)
        typeChartButton.addTarget(self, action: #selector(typeChartButtonTapped), for: .touchUpInside)
        typeChartButton.accessibilityIdentifier = "typeChartButton"
        
        let typePokemonButton = MainButton()
        typePokemonButton.setTitle("Type Pokémon", for: .normal)
...
